// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractCode.vue Should display the contract verification panel for public explorers 1`] = `
<div class="container container--fluid">
  <div class="mt-2 v-item-group theme--light v-expansion-panels">
    <div aria-expanded="false" class="v-expansion-panel mb-2 v-expansion-panel--next-active"><button type="button" class="v-expansion-panel-header">
        <h4>Contract Verification
          <!---->
        </h4>
        <transition-stub name="fade-transition">
          <div class="v-expansion-panel-header__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-down theme--light"></i></div>
        </transition-stub>
      </button>
      <transition-stub name="expand-transition">
        <!---->
      </transition-stub>
    </div>
    <div aria-expanded="true" class="v-expansion-panel mb-2 v-expansion-panel--active v-item--active"><button type="button" aria-expanded="true" class="v-expansion-panel-header v-expansion-panel-header--active">
        <h4>Bytecode</h4>
        <transition-stub name="fade-transition">
          <div class="v-expansion-panel-header__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-down theme--light"></i></div>
        </transition-stub>
      </button>
      <transition-stub name="expand-transition">
        <div class="v-expansion-panel-content">
          <div class="v-expansion-panel-content__wrap">
            <div class="v-input v-textarea v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined">
              <div class="v-input__control">
                <div class="v-input__slot">
                  <fieldset aria-hidden="true">
                    <legend style="width: 0px;"><span class="notranslate">​</span></legend>
                  </fieldset>
                  <div class="v-text-field__slot"><textarea disabled="disabled" id="input-19" rows="5"></textarea></div>
                  <div class="v-input__append-inner"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-content-copy theme--light" style="font-size: 16px;"></i></span></button></div>
                </div>
                <div class="v-text-field__details">
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
            </div> <input type="hidden" id="copyElement" value="0x60">
          </div>
        </div>
      </transition-stub>
    </div>
    <div aria-expanded="false" class="v-expansion-panel"><button type="button" class="v-expansion-panel-header">
        <h4>Assembly</h4>
        <transition-stub name="fade-transition">
          <div class="v-expansion-panel-header__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-down theme--light"></i></div>
        </transition-stub>
      </button>
      <transition-stub name="expand-transition">
        <!---->
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`ContractCode.vue Should not display the contract verification panel if not public explorer 1`] = `
<div class="container container--fluid">
  <div class="mt-2 v-item-group theme--light v-expansion-panels">
    <!---->
    <div aria-expanded="false" class="v-expansion-panel mb-2 v-expansion-panel--next-active"><button type="button" class="v-expansion-panel-header">
        <h4>Bytecode</h4>
        <transition-stub name="fade-transition">
          <div class="v-expansion-panel-header__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-down theme--light"></i></div>
        </transition-stub>
      </button>
      <transition-stub name="expand-transition">
        <!---->
      </transition-stub>
    </div>
    <div aria-expanded="true" class="v-expansion-panel v-expansion-panel--active v-item--active"><button type="button" aria-expanded="true" class="v-expansion-panel-header v-expansion-panel-header--active">
        <h4>Assembly</h4>
        <transition-stub name="fade-transition">
          <div class="v-expansion-panel-header__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-down theme--light"></i></div>
        </transition-stub>
      </button>
      <transition-stub name="expand-transition">
        <div class="v-expansion-panel-content">
          <div class="v-expansion-panel-content__wrap">
            No assembly for this contract. Redeploy to upload it.
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
